src/main/java/com/example/restaurant_advisor/error/ModificationRestrictionException.java
package com.example.restaurant_advisor.error;

public class ModificationRestrictionException extends AppException {
    public static final String EXCEPTION_MODIFICATION_RESTRICTION = "exception.user.modificationRestriction";

    public ModificationRestrictionException() {
        super(ErrorType.VALIDATION_ERROR, EXCEPTION_MODIFICATION_RESTRICTION);
    }
}